# learning-devspaces

./: .gitignore  devspace.yaml
api_server/: Dockerfile  devspace.yaml  pyproject.toml
api_server/api_server/: server.py
webapp/: Dockerfile  devspace.yaml  package.json
