[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Nir Geller <gnir.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
ipython = "^8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
